# webmud-ng

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: ansi.rs  conn.rs  handler.rs  legacy.rs  main.rs
static/: index.html
static/css/: telnet.css
static/js/: client.js  json_parse.min.js
